# issue_quest_server

./: .gitignore  Cargo.toml  README.md  compose.yaml
app/: Cargo.toml  Dockerfile  Rocket.toml
app/controller/: Cargo.toml
app/controller/src/: healthcheck.rs  user.rs
app/domain/src/: user.rs
app/repository/src/: user_repository.rs
app/src/: main.rs  schema.rs
app/usecase/: Cargo.toml
server/: .env  Cargo.toml  rust-toolchain.toml
server/app/: Cargo.toml
server/app/controller/src/: lib.rs
server/app/domain/: Cargo.toml
server/app/usecase/src/: create_user.rs
server/migrations/2025-01-03-064408_create_users/: up.sql
server/src/: lib.rs  main.rs  models.rs
server/src/controller/: user.rs
server/src/domain/: user.rs
server/src/usecase/: user.rs
