[package]
name = "issue_quest"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["secrets", "json", "secrets", "tls"] }
diesel = { version = "2.2.6", features = ["postgres", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1.1.3"
serde = { version = "1.0", features = ["derive"] }
